Configurando o banco de dados

--- a/TCC/SistemaPaese/src/main/resources/application.properties
+++ b/TCC/SistemaPaese/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=SistemaPaese
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/sistema_paese_dev
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format-sql=true
+
+spring.mvc.hiddenmethod.filter.enabled=true
